--- a/project-perception/src/index.css
+++ b/project-perception/src/index.css
@@ -1,3 +1,4 @@
+/* General CSS */
 body {
   margin: 0;
   background-color: #3a444d;;
@@ -7,75 +8,11 @@ body {
   display: flex;
 }
 
-.footer-main {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  margin-top: 10em;
-}
-
 .navbar-main, .navbar-left, .menu-dropdown ul, .tags, .tags div, .footer-main, .animal-details {
   display: flex;
 }
 
-.animal-details {
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  color: #e9e3cb;
-}
-
-.animal-details Button {
-  background-color: #E2A856;
-  border-radius: 0.5em;
-  padding: 1em 5em 1em 5em;
-  margin-top: 1em;
-  font-size: 20px;
-  font-family: 'Lato', sans-serif;
-}
-
-.audio-off-logo {
-  float: right;
-  margin-left: 100em;
-  width: 2em;
-}
-
-.animal-details .turtle-pic {
-  width: 25em;
-  height: 14em;
-}
-
-.navbar-main, .navbar-left, .menu-dropdown ul, .tag-block, .footer-main, .story-title {
-  align-items: center;
-}
-
-.navbar-main, .footer-main {
-  background-color: #e9e3cb;
-  color: #3a444d;
-  justify-content: space-between;
-} 
-
-.footer-logo img {
-  height: 2em;
-  width: 7em;
-}
-
-.footer-logo, .footer-desc, .footer-copyright {
-  display: flex;
-  flex-direction: row;
-  margin: 3em 1em 3em 3em;
-}
-
-.navbar-right, .hidden {
-  display: none;
-}
-
-.navbar-title, .stories-title h1, .story-heading, .back-to-states p, .stories-title p, .story-name, .species-name, .back-to-stories p, .story-paragraph, .story-question {
-  font-family: 'Cinzel', serif;
-}
-
-.back-to-states p, .stories-title p, .story-name, .species-name, .animal-details {
+.back-to-states p, .stories-title p, .story-name, .species-name, .animal-details, .choice-btn, .story-paragraph {
   font-family: 'Lato', sans-serif;
 }
 
@@ -90,6 +27,141 @@ body {
   width: 100px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.audio-logo {
+  margin-right: 10px;
+}
+
+/* Footer CSS */
+.footer-main {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 10em;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo img {
+  height: 2em;
+  width: 7em;
+  margin-right: 1.5em;
+}
+
+.footer-logo h3 {
+  font-family: 'Cinzel', serif;
+}
+
+.footer-logo, .footer-desc, .footer-copyright {
+  margin: 2em 2em 0em 2em;
+}
+
+.footer-main .footer-content {
+  display: flex;
+  flex-direction: row;
+  font-family: 'Lato', sans-serif;
+}
+
+.footer-copyright {
+  font-family: 'Lato', sans-serif;
+}
+
+.footer-main .footer-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 28em;
+}
+
+.footer-main .footer-desc {
+  text-align: start;
+}
+
+/* Animal Detail page CSS */
+.animal-details {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  color: #e9e3cb;
+  margin-top: 5em;
+}
+
+.animal-details button {
+  background-color: #E2A856;
+  border-radius: 0.5em;
+  padding: 1em 5em 1em 5em;
+  margin-top: 1em;
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  display: inline-block;
+  text-align: center;
+}
+
+.animal-details .turtle-pic {
+  width: 25em;
+  height: 14em;
+}
+
+.animal-details .details-title h1, .navbar-title, .stories-title h1, .story-heading, .back-to-states p, .stories-title p, .story-name, .species-name, .back-to-stories p {
+  font-family: 'Cinzel', serif;
+}
+
+.status {
+  display: flex;
+  flex-direction: row;
+}
+
+.down-arrow {
+  
+}
+
+.status .status-candidate {
+  background-color: #E2A856;
+  padding: 0.5em;
+}
+
+.status .status-threatened {
+  background-color: #CA5E13;
+  padding: 0.5em;
+}
+
+.status .status-endangered {
+  background-color: #C10000;
+  padding: 0.5em;
+}
+
+.animal-details .audio-logo {
+  position: absolute;
+  bottom: 50em;
+  right: 0px;
+}
+
+.animal-details .back-to-stories {
+  position: absolute;
+  bottom: 50em;
+  left: 0px;
+}
+
+.details-desc, .details-status {
+  font-size: 18px;
+}
+
+/* Navbar CSS */
+.navbar-main, .navbar-left, .menu-dropdown ul, .tag-block, .footer-main, .story-title, .back-to-stories {
+  align-items: center;
+}
+
+.navbar-main, .footer-main {
+  background-color: #e9e3cb;
+  color: #3a444d;
+  justify-content: space-between;
+} 
+
+.navbar-right, .hidden {
+  display: none;
 }
 
 .page-links {
@@ -124,7 +196,7 @@ body {
   width: 30px;
 }
 
-.back-to-states, .back-to-stories {
+.back-to-states {
   float: left;
   display: flex;
   align-items: center;
@@ -135,15 +207,6 @@ body {
 .back-to-states p, .back-to-stories p {
   margin-left: 10px;
   color: #e9e3cb;
-}
-
-.status {
-  display: flex;
-  flex-direction: row;
-}
-
-.status p {
-  margin-right: 1em;
 }
 
 .stories-title {
@@ -224,10 +287,6 @@ body {
   margin-left: 10px;
 }
 
-.audio-logo {
-  margin-right: 10px;
-}
-
 .jelly-gif {
   display: none;
 }
@@ -236,6 +295,8 @@ body {
   color: #72604C
 }
 
+
+/* Responsiveness */
 @media (min-width: 768px) {
   .navbar-title {
     font-size: 30px;
@@ -356,7 +417,7 @@ body {
     margin-top: 70px;
     margin-left: 30px;
     margin-right: 30px;
-    font-size: 18px;
+    font-size: 20px;
     color: #72604C
   }
 
@@ -365,5 +426,19 @@ body {
     text-align: center;
     margin-top: 70px;
     font-weight: 700;
+  }
+
+  .choice-container {
+    text-align: center;
+  }
+
+  .choice-btn {
+    background-color: #E2A856;
+    height: 52px;
+    width: 240px;
+    border-radius: 15px;
+    margin-top: 30px;
+    color: #72604C;
+    font-size: 24px;
   }
 }
