--- a/project-perception/src/index.css
+++ b/project-perception/src/index.css
@@ -12,7 +12,7 @@ body {
   display: flex;
 }
 
-.back-to-states p, .stories-title p, .story-name, .species-name, .animal-details, .choice-btn, .story-paragraph {
+.back-to-states p, .stories-title p, .story-name, .species-name, .animal-details, .choice-btn, .story-paragraph, .story-paragraph2 {
   font-family: 'Lato', sans-serif;
 }
 
@@ -287,11 +287,11 @@ body {
   margin-left: 10px;
 }
 
-.jelly-gif {
+.gif {
   display: none;
 }
 
-.story-paragraph, .story-question {
+.story-paragraph, .story-question, .story-paragraph2 {
   color: #72604C
 }
 
@@ -398,23 +398,29 @@ body {
     width: calc(100% - 92px);
   }
 
-  .jelly-gif {
+  .gif {
     display: block;
     margin-left: 46px;
-    height: 500px;
     width: calc(50% - 80px);
     float: left;
   }
 
+  .jellyfish {
+    height: 500px;
+  }
+
+  .ocean {
+    height: 600px;
+  }
+
   .story-content {
     display: inline-block;
-    height: 500px;
     width: calc(50% - 12px);
     background-color: #e9e3cb;
   }
 
-  .story-paragraph {
-    margin-top: 70px;
+  .story-paragraph, .story-paragraph2 {
+    margin-top: 50px;
     margin-left: 30px;
     margin-right: 30px;
     font-size: 20px;
@@ -437,8 +443,16 @@ body {
     height: 52px;
     width: 240px;
     border-radius: 15px;
-    margin-top: 30px;
+    margin-top: 20px;
     color: #72604C;
-    font-size: 24px;
+    font-size: 20px;
+  }
+
+  .choice-btn:hover {
+    cursor: pointer;
+  }
+
+  .story-content .story-paragraph2:nth-child(2) {
+    margin-top: 0;
   }
 }
