--- a/project-perception/src/index.css
+++ b/project-perception/src/index.css
@@ -351,6 +351,25 @@ body {
 
 .close {
   cursor: pointer;
+  float: right;
+}
+
+.modal-content {
+  background-color: #74624e;
+  color: #e9e3cb;
+  position: absolute;
+  top: 40%;
+  left: 35%;
+  width: 30%;
+  height: calc(100% - 50%);
+  padding: 20px;
+  border-radius: 5px;
+  border: 2px solid black;
+  font-size: 24px;
+}
+
+.fishing-pot {
+  width: 100%;
 }
 
 /* Responsiveness */
