--- a/project-perception/src/index.css
+++ b/project-perception/src/index.css
@@ -53,7 +53,7 @@ body {
   background-color: #e9e3cb;
   color: #3a444d;
   justify-content: space-between;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 .footer-logo img {
@@ -106,7 +106,9 @@ body {
 }
 
 .map-img {
-  height: 40em;
+  height: 55em;
+  margin-top: -7em;
+  margin-bottom: -8em;
 }
 
 .map-header {
@@ -121,6 +123,7 @@ body {
   background-color: #E2A856;
   width: 100%;
   height: 3em;
+  z-index: -1;
 }
 
 .slide-btn {
@@ -146,6 +149,33 @@ body {
 
 .slide-3-cap {
   margin: 0em 50em 30em 0em;
+}
+
+.divide-arrow {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  height: 5em;
+  padding-bottom: 2em;
+}
+
+.divide-arrow-btn {
+  background-color: transparent;
+  border: none;
+  display: block;
+  margin: auto;
+}
+
+.turtle-region-btn {
+  position: absolute;
+  margin-left: -64em;
+  margin-top: 5em;
+  width: 18em;
+  height: 15em;
+  background-color: transparent;
+  border: none;
+}
+
+.map-btn-container {
+  position: relative;
 }
 
 
@@ -277,6 +307,7 @@ body {
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin-top: 2rem;
+  margin-bottom: 5em;
 }
 
 /* Animal Detail page CSS */
@@ -292,6 +323,7 @@ body {
   border-radius: 0.5em;
   padding: 1em 5em 1em 5em;
   margin-top: 1em;
+  margin-bottom: 6em;
   font-size: 20px;
   font-family: 'Lato', sans-serif;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -398,6 +430,7 @@ body {
   border-bottom: .2rem solid #3a444d;
 }
 
+/* Animal Story Cards */
 .left-arrow {
   height: 30px;
   width: 30px;
@@ -431,6 +464,8 @@ body {
 
 .stories-row {
   justify-content: space-evenly;
+  margin-bottom: 17em;
+  margin-top: 4em;
 }
 
 .species-card, .turtle-pic, .bunny-pic {
@@ -838,6 +873,7 @@ body {
     width: 300px;
   }
 
+  /* Stories */
   .story-name, .species-name {
     margin-left: 25px;
   }
@@ -886,6 +922,10 @@ body {
     display: inline-block;
     width: calc(50% - 12px);
     background-color: #e9e3cb;
+  }
+
+  .story-container {
+    margin-bottom: 15em;
   }
 
   .story-paragraph, .story-paragraph2 {
