worked on journey cards

--- a/project-perception/src/index.css
+++ b/project-perception/src/index.css
@@ -11,6 +11,10 @@ body {
   background-color: #3a444d;
 }
 
+.hidden {
+  display: none;
+}
+
 /* html {
   position: relative;
   min-height: 100%;
